; ModuleID = '/home/carl/AnghaBench/libgit2/tests/diff/extr_workdir.c_assert_delta_binary.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/diff/extr_workdir.c_assert_delta_binary.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@GIT_DIFF_FLAG_BINARY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i64, i32)* @assert_delta_binary to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @assert_delta_binary(i32* %0, i64 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i32*, i32** %4, align 8
  %10 = load i64, i64* %5, align 8
  %11 = call i32 @git_patch_from_diff(i32** %7, i32* %9, i64 %10)
  %12 = call i32 @cl_git_pass(i32 %11)
  %13 = load i32*, i32** %7, align 8
  %14 = call %struct.TYPE_3__* @git_patch_get_delta(i32* %13)
  store %struct.TYPE_3__* %14, %struct.TYPE_3__** %8, align 8
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load i32, i32* @GIT_DIFF_FLAG_BINARY, align 4
  %19 = and i32 %17, %18
  %20 = load i32, i32* %6, align 4
  %21 = call i32 @cl_assert_equal_b(i32 %19, i32 %20)
  %22 = load i32*, i32** %7, align 8
  %23 = call i32 @git_patch_free(i32* %22)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_patch_from_diff(i32**, i32*, i64) #1

declare dso_local %struct.TYPE_3__* @git_patch_get_delta(i32*) #1

declare dso_local i32 @cl_assert_equal_b(i32, i32) #1

declare dso_local i32 @git_patch_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
